--- a/ClipWatcher/ClipWatcher.csproj
+++ b/ClipWatcher/ClipWatcher.csproj
@@ -11,8 +11,8 @@
 
 	<PropertyGroup>
 		<AssemblyVersion>1.0.0.0</AssemblyVersion>
-		<FileVersion>1.0.0.2</FileVersion>
-		<Version>1.0.0.2</Version>
+		<FileVersion>1.0.0.3</FileVersion>
+		<Version>1.0.0.3</Version>
 		<Authors>irisdotsh</Authors>
 		<Company>irisdotsh</Company>
 		<Description>Watches a clips folder and can copy the latest clip to the clipboard and upload it to Discord via webhook.</Description>
@@ -22,6 +22,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Discord.Net.Webhook" Version="3.17.2" />
+		<PackageReference Include="YamlDotNet" Version="16.3.0" />
 	</ItemGroup>
 
 	<ItemGroup>
